--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -88,7 +88,6 @@
                 <th>Price</th>
                 <th>Description</th>
                 <th>Date Added</th>
-                <th>Edit / remove</th>
             </tr>`
             products.forEach((item) => {
                 htmlString += `\n<tr>
@@ -96,6 +95,20 @@
                 <td>${item.fields.price}</td>
                 <td>${item.fields.description}</td>
                 <td>${item.fields.date_added}</td>
+                <td>
+                    <a href="edit-product/${item.pk}">
+                        <button>
+                            Edit
+                        </button>
+                    </a>
+                </td>
+                <td>
+                    <a href="delete/${item.pk}">
+                        <button>
+                            Delete
+                        </button>
+                    </a>
+                </td>
             </tr>` 
             })
             document.getElementById("product_table").innerHTML = htmlString
